--- a/assets/sass/layout/_breadcrumb.scss
+++ b/assets/sass/layout/_breadcrumb.scss
@@ -4,14 +4,7 @@
     margin-bottom: 0;
     position: relative;
     z-index: 1;
-    padding: 155px 0 70px;
-    background-color: #ddd;
-    @include md-screen {
-        padding: 115px 0 60px;
-    }
-    @include sm-screen {
-        padding: 105px 0 40px;
-    }
+    background-color: rgba(0,166,81,.1);
     &::before{
         position: absolute;
         content: "";
