--- a/assets/sass/partials/home/_banner.scss
+++ b/assets/sass/partials/home/_banner.scss
@@ -85,7 +85,7 @@
 .activity-item {
     background-color: var(--white);
     padding: 20px 30px 15px;
-    border-radius: 50px;
+    border-radius: 12px;
 
     @include msm-screen {
         padding: 15px 10px;
@@ -98,7 +98,8 @@
 
     &:not(:last-child) {
         margin-bottom: 24px;
-        @include msm-screen{
+
+        @include msm-screen {
             margin-bottom: 12px;
         }
     }
@@ -128,18 +129,52 @@
     margin-bottom: 6px;
 }
 
-.service-card{
+.service-card {
     padding: 20px;
     border-radius: 12px;
     border: 1px solid var(--base);
     background: rgb(0 166 81 / 10%);
 
-    &__image{
+    &__image {
         width: 64px;
         margin: 0 0 10px;
     }
 
-    &__title{
+    &__title {
         margin-bottom: 6px;
     }
+}
+
+.callaction{
+    background-color: var(--dark);
+}
+
+.callaction-content {}
+
+.callaction-content h3 {
+    color: var(--white);
+}
+
+.callaction-content p {
+    color: rgb(255 255 255 / 70%);
+}
+
+.callaction_wrapper{
+    background-color: var(--base);
+    padding: 60px 40px;
+    border-radius: 12px;
+}
+
+.callaction_wrapper a{
+    background-color: var(--dark);
+    border: 2px solid transparent;
+
+    &:hover{
+        background-color: transparent;
+        border: 2px solid var(--dark);
+    }
+}
+
+.about-add{
+    background-color: rgba(0,166,81,.1);
 }
