--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -11,7 +11,8 @@
 
 .footer-item {
     &__logo {
-        text-align: center;
+        text-align: left;
+        margin-bottom: 10px;
         a {
             img {
                 width: 100%;
