--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -61,12 +61,16 @@
     gap: 24px;
     padding: 10px 20px;
     border-radius: 12px;
-    background: rgb(0 166 81 / 10%);
+    background: rgb(0 166 81 / 100%);
 }
 
 .header_nav ul li a {
     font-size: 16px;
     font-weight: 500;
+    color: var(--white);
+    &:hover{
+        color: white;
+    }
 }
 
 .header_toggler {
@@ -74,8 +78,8 @@
     width: 40px;
     display: grid;
     place-content: center;
-    background-color: var(--base);
-    color: var(--white);
+    background-color: var(--white);
+    color: var(--base);
     cursor: pointer;
     border-radius: 50%;
 }
