--- a/assets/sass/layout/_selection.scss
+++ b/assets/sass/layout/_selection.scss
@@ -1,6 +1,6 @@
 /* ================================= Template Selection Css Start =========================== */
 ::selection {
     color:var(--white);
-    background: hsl(var(--base-d-100));
+    background: var(--base);
 }
 /* ================================= Template Selection Css End ===========================  */ 
